--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,9 @@ dependencies = [
     "sqlalchemy>=2.0.44",
     "sqlparse>=0.5.3",
     "uvicorn>=0.24.0",
+    "google-auth>=2.0.0",
+    "google-auth-oauthlib>=1.0.0",
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
+    "python-multipart>=0.0.6",
 ]
